--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 /*
  *= require_self
  */
-@import 'normalize' ;
-@import "global.css.scss" ;
-@import "pros.css.scss";
-@import "welcome.css.scss"
+// @import 'normalize' ;
+// @import "global.css.scss" ;
+// @import "pros.css.scss";
+// @import "welcome.css.scss"
